--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+
+@layer utilities {
+    .wrapper {
+        @apply max-w-7xl w-full mx-auto px-2 lg:px-0
+    }
+
+}
