--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 
 @layer utilities {
   .wrapper {
-    @apply max-w-7xl w-full mx-auto px-2 lg:px-0
+    @apply max-w-[1360px] w-full mx-auto px-2 lg:px-0
   }
 
 }
